--- a/style.css
+++ b/style.css
@@ -1,15 +1,85 @@
-*{
+
+body {
+    font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
 }
-.navbar{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
 
+.container {
+    width: 80%;
+    margin: 0 auto;
 }
-a{
+
+
+header {
+    background: #f8f9fa;;
+    color: #fff;
+    padding: 20px 0;
+    display: flex; 
+    justify-content: space-between; 
+    align-items: center; 
+}
+
+.logo {
+    width: 175px;
+    height: auto;
+}
+
+nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+nav ul li {
+    display: inline;
+    margin-left: 20px;
+}
+
+nav ul li a {
     text-decoration: none;
-    color: black;
+    color: #f4f4f4;
+}
+
+.hero {
+    text-align: center;
+    padding: 50px 0;
+    background-color:white;
+}
+
+.btn {
+    display: inline-block;
+    background-color: #333;
+    color: #fff;
+    padding: 10px 20px;
+    text-decoration: none;
+    border-radius: 5px;
+    margin-top: 20px;
+}
+
+.featured-products {
+    padding: 50px 0;
+    background-color:white;
+}
+
+.product-grid {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.product {
+    text-align: center;
+    margin-bottom: 20px;
+    width: 200px; 
+}
+
+.product img {
+    width: 100%; 
+    height: auto;
+}
+.brand-name {
+    font-family: "Segoe UI", sans-serif; 
+    margin-left: 37px; 
+    font-weight: 600;
 }
